Build errors with -Wcast-align in the MbimTlv management
[38/108] Compiling C object src/libmbim-glib/libmbim-glib-core.a.p/mbim-tlv.c.o
../src/libmbim-glib/mbim-tlv.c:261:13: warning: cast from 'guint8 *' (aka 'unsigned char *') to 'const gunichar2 *' (aka 'const unsigned short *') increases required alignment from 1 to 2 [-Wcast-align]
utf16 = (const gunichar2 *) MBIM_TLV_FIELD_DATA (self);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/libmbim-glib/mbim-tlv.c:308:37: warning: cast from 'guint8 *' (aka 'unsigned char *') to 'const guint16 *' (aka 'const unsigned short *') increases required alignment from 1 to 2 [-Wcast-align]
tmp = (guint16 *) g_memdup ((const guint16 *)MBIM_TLV_FIELD_DATA (self), size);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~