libmbim-glib,tlv: avoid cast alignment warning

../src/libmbim-glib/mbim-tlv.c:308:37: warning: cast from
  'guint8 *' (aka 'unsigned char *') to 'const guint16 *' (aka 'const
  unsigned short *') increases required alignment from 1 to 2
  [-Wcast-align]
          tmp = (guint16 *) g_memdup ((const guint16 *)MBIM_TLV_FIELD_DATA (self), size);
                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
g_memdup() wants a pointer, so there is no need for the explicit cast
to a different type.

Fixes https://gitlab.freedesktop.org/mobile-broadband/libmbim/-/issues/35